# aidguide_04

./: .gitignore  README.md  frames.gv  package-lock.json  prueba-simple.sh  start-frontend.ps1  start-frontend.sh  start-nav.ps1  start-nav.sh  start-ros2-gazebo.sh
aidguide_04_ws/: frames.gv  instrucciones_camara.txt  (+3 more)
aidguide_04_ws/src/aidguide_04/: package.xml  setup.cfg  setup.py
aidguide_04_ws/src/aidguide_04/aidguide_04/: __init__.py
aidguide_04_ws/src/aidguide_04/resource/: aidguide_04
aidguide_04_ws/src/aidguide_04/test/: test_aidguide_system.py  test_copyright.py  test_flake8.py  test_pep257.py
aidguide_04_ws/src/aidguide_04_slam/: GUIA_RAPIDA.md  README.md  package.xml  setup.cfg  setup.py
aidguide_04_ws/src/aidguide_04_slam/aidguide_04_slam/: __init__.py  localization_node.py  slam_node.py
aidguide_04_ws/src/aidguide_04_slam/config/: amcl_params.yaml  slam_params.yaml
aidguide_04_ws/src/aidguide_04_slam/launch/: localization_launch.py  slam_launch.py  test_map_with_robot.launch.py  test_slam.launch.py  view_map_launch.py
aidguide_04_ws/src/aidguide_04_slam/maps/: tb3_house_map.pgm
aidguide_04_ws/src/aidguide_04_slam/scripts/: README.md  aidguide_slam_auto.sh  instalar.sh
aidguide_04_ws/src/aidguide_04_web/: CMakeLists.txt  Dockerfile  package-lock.json  package.json  package.xml  tailwind.config.ts
aidguide_04_ws/src/aidguide_04_web/app/: globals.css  layout.tsx  page.tsx
aidguide_04_ws/src/aidguide_04_web/app/about/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/alerts/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/dashboard/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/robots/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/routes/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/settings/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/admin/users/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/contact/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/family/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/family/profile/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/faq/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/login/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/privacy/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/product/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/profile/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/profile/gamification/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/register/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/reset-password/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/robot-feed/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/routes/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/terms/: page.tsx
aidguide_04_ws/src/aidguide_04_web/app/welcome/: page.tsx
aidguide_04_ws/src/aidguide_04_web/components/: footer.tsx  header.tsx  robot-model-fallback.tsx  robot-model.tsx  robot-producto-model.tsx  simple-robot-model.tsx
aidguide_04_ws/src/aidguide_04_web/context/: auth-context.tsx  robot-context.tsx
aidguide_04_ws/src/aidguide_04_web/public/: license.txt  robot_dog.glb  scene.gltf
aidguide_04_ws/src/aidguide_04_web/types/: roslib.d.ts
aidguide_04_ws/src/custom_interface/: CMakeLists.txt  package.xml
(+98 files in other folders)
