<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aidguide_04_slam</name>
  <version>0.0.1</version>
  <description>Paquete para SLAM y localización en AidGuide 04</description>
  <maintainer email="visi02@example.com">visi02</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 